objects/TW1_Projurid__c.object
<CustomObject>
    <fields>
        <fullName>Data_em_texto__c</fullName>
        <label>Data em texto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empreendimento__c</fullName>
        <label>Empreendimento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Acao__c</fullName>
        <label>Ação</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Bloco__c</fullName>
        <label>Bloco</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_CPF_CNPJ__c</fullName>
        <label>CPF/CNPJ</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Causa_pedir__c</fullName>
        <label>Causa de pedir</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Conta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ações - Projurid</relationshipLabel>
        <relationshipName>TW1_Projurid_Conta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Processo__c</fullName>
        <label>Data do Processo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_inclusao__c</fullName>
        <label>Data de inclusão</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_modificacao__c</fullName>
        <label>Data da modificação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Empresa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Empresa</label>
        <referenceTo>TW1_Empresa__c</referenceTo>
        <relationshipLabel>Ações - Projurid</relationshipLabel>
        <relationshipName>TW1_Projurid_Empresa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Escritorio__c</fullName>
        <label>Escritório</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Fase_processo__c</fullName>
        <label>Fase do processo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_Processo__c</fullName>
        <externalId>true</externalId>
        <label>Número do Processo</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Parte_contraria__c</fullName>
        <label>Parte contraria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Parte_interessada__c</fullName>
        <label>Parte interessada</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Posicao_parte_contraria__c</fullName>
        <label>Posição parte contraria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Posicao_parte_interessada__c</fullName>
        <label>Posição parte interessada</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aberto</fullName>
                </value>
                <value>
                    <fullName>Fechado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Unidade__c</fullName>
        <label>Unidade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teste_de_Data__c</fullName>
        <formula>DATEVALUE(Data_em_texto__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teste de Data</label>
        <type>Date</type>
    </fields>
    <label>Projurid</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>A-{YYYY}{MM}-{0000}</displayFormat>
        <label>Projurid</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projurid</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>